--- a/Contents/surahs/066/008.md
+++ b/Contents/surahs/066/008.md
@@ -1,1 +1,4 @@
+- yas'a = light speed is not infinite?
+    - https://www.history.com/news/who-determined-the-speed-of-light
+    - https://en.wikipedia.org/wiki/R%C3%B8mer%27s_determination_of_the_speed_of_light
 - right-hand rule
