--- a/Contents/surahs/002/036.md
+++ b/Contents/surahs/002/036.md
@@ -4,3 +4,4 @@
   - intentional? animosity & corruption
 - test:
   - find any location on world's map, then read its history
+  - https://youtu.be/HK5OsDWYJmQ (read the description)
