--- a/Contents/surahs/002/128.md
+++ b/Contents/surahs/002/128.md
@@ -11,6 +11,7 @@
     - ummatan = at least one ummah
 - arina manasikana
     - formalism
+    - form & content
     - our compass can not be trusted
     - "na" = all of us (me, my son, my descendents)
 - tawwab
