--- a/Contents/surahs/004/023.md
+++ b/Contents/surahs/004/023.md
@@ -1,2 +1,5 @@
 - Term apply to generations (proof = 2:133)
+- 28:27
+    - Maybe marrying sisters were fobidden before
+    - constance of the foundatin of the good and evil
 - inbreeding in House of Habsburg
