--- a/Contents/surahs/004/024.md
+++ b/Contents/surahs/004/024.md
@@ -1,1 +1,1 @@
-- how can someone be محصن and غیر مسافح and seek Nikah Mut'ah
+- how can someone be محصن and غیر مسافح and seek Nikah Mut'ah and Misyar marriage 
