committed by script

--- a/Contents/surahs/007/025.md
+++ b/Contents/surahs/007/025.md
@@ -2,7 +2,8 @@
   - How many individuals can be made?
   - Virtual particles
   - Neutrino oscillation
-  - Undiacovered science
+  - Undiscovered science
   - Borrowing matter from other places
     - سُطِّحَت
   - Creating matter
+- Refuting [Kardashev scale](https://en.wikipedia.org/wiki/Kardashev_scale)
