--- a/Contents/surahs/029/014.md
+++ b/Contents/surahs/029/014.md
@@ -1,1 +1,3 @@
 - http://www.native-languages.org/numbers/bakairi_numbers.htm
+- https://en.wikipedia.org/wiki/Attic_numerals
+  - 49 = 40 + 9 = ΔΔΔΔ + ΠΙΙΙΙ = ΔΔΔΔΠΙΙΙΙ
